# ECE590_Source_Code_Analysis

./: .gitignore  README.md
src/: CMakeLists.txt  CheckStrategies.h  DeadStoresCheck.h  Diagnostic_Engine.h  LoopInvariantCheck.h  MatchCallback.cpp  MatchCallback.h  UnreachableCodeCheck.h  compile_commands.json  main.cpp
src/data/: compile_commands.json  example_1.cpp
